# pycosmiconfig

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  example.config.py  example.py  manage.py  pyproject.toml
pycosmiconfig/: __init__.py  utils.py
pycosmiconfig/port/: ExplorerBase.py  ExplorerSync.py  index.py  loaders.py  types.py  util.py
pycosmiconfig/tests/: test_meta_config.py  test_util.py  util.py
scripts/: format-imports.sh  format.sh  lint.sh  test-cov.sh  test.sh
