[tool.poetry]
# NOTE: MUST be same as the dir with python files
name = "pycosmiconfig"
version = "0.1.0"
description = ""
authors = ["Juro Oravec <juraj.oravec.josefson@gmail.com>"]
maintainers = ["Juro Oravec <juraj.oravec.josefson@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jurooravec/pycosmiconfig"
repository = "https://github.com/jurooravec/pycosmiconfig"
documentation = "https://github.com/jurooravec/pycosmiconfig"
keywords = [
    "cosmiconfig",
    "config",
    "configuration",
    "preferences",
    "settings",
    "setup",
    "json",
    "yaml",
    "yml",
    "toml",
    "tml",
]
license = "MIT"
# See https://pypi.org/classifiers/
classifiers = []
packages = [{ include = "pycosmiconfig" }]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
pyyaml = "^6.0.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
mypy = "^1.5"
black = "^22.8.0"
isort = "^5.10.1"
autoflake = "^1.5.3"
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest-describe = "^2.1.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.coverage.report]
skip_empty = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "manage:run_format"
"format:imports" = "manage:run_format_imports"
lint = "manage:run_lint"
test = "manage:run_test"
"test:cov" = "manage:run_test_cov"
"test:cov:html" = "manage:run_test_cov_html"
